--- a/index.html
+++ b/index.html
@@ -73,17 +73,14 @@
     </style>
 </head>
 <body>
-
     <div class="navbar">
         <span>CRM Dashboard</span>
         <button onclick="toggleSettings()">⚙ Settings</button>
     </div>
-
     <div class="settings-menu" id="settingsMenu">
         <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
         <button onclick="logout()">Logout</button>
     </div>
-
     <div id="loginSection">
         <div class="login-container">
             <h2>Login</h2>
@@ -94,70 +91,56 @@
             <p class="error-message" id="errorMessage" style="color: red; display: none;">Invalid credentials!</p>
         </div>
     </div>
-
     <div id="dashboard" style="display: none;">
         <h1 id="welcomeMessage">Welcome to Your CRM</h1>
-        
         <div id="adminPanel" class="admin-panel" style="display: none;">
             <h3>Add Recommendation</h3>
             <input type="text" id="recTitle" placeholder="Title">
             <input type="text" id="recDetails" placeholder="Details (Buy Price, Target, Stop Loss)">
             <button onclick="addRecommendation()">Add</button>
         </div>
-
         <div id="recommendations">
             <h2>Stock Market Recommendations</h2>
             <div id="recList"></div>
         </div>
     </div>
-
     <script>
         const users = {
             "admin": { password: "admin123", role: "Admin" },
             "analyst": { password: "analyst123", role: "Analyst" },
             "client": { password: "client123", role: "Client" }
         };
-
         let recommendations = [];
-
         function toggleSettings() {
             const menu = document.getElementById("settingsMenu");
             menu.style.display = menu.style.display === "block" ? "none" : "block";
         }
-
         function toggleDarkMode() {
             document.body.classList.toggle("dark-mode");
             localStorage.setItem("darkMode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
         }
-
         function logout() {
             localStorage.removeItem("loggedInUser");
             location.reload();
         }
-
         function loadLogin() {
             const savedUser = JSON.parse(localStorage.getItem("loggedInUser"));
             if (savedUser) {
                 showDashboard(savedUser.role);
             }
         }
-
         function showDashboard(role) {
             document.getElementById("loginSection").style.display = "none";
             document.getElementById("dashboard").style.display = "block";
             document.getElementById("welcomeMessage").textContent = `Welcome ${role}!`;
-
             if (role === "Admin" || role === "Analyst") {
                 document.getElementById("adminPanel").style.display = "block";
             }
-
             loadRecommendations();
         }
-
         document.getElementById('submitLogin').addEventListener('click', function() {
             let username = document.getElementById("username").value.trim().toLowerCase();
             let password = document.getElementById("password").value.trim();
-            
             if (users[username] && users[username].password === password) {
                 showDashboard(users[username].role);
                 if (document.getElementById("rememberMe").checked) {
@@ -167,26 +150,27 @@
                 document.getElementById("errorMessage").style.display = "block";
             }
         });
-
         function addRecommendation() {
             const title = document.getElementById("recTitle").value;
             const details = document.getElementById("recDetails").value;
-
             if (title && details) {
                 recommendations.push({ title, details });
                 localStorage.setItem("recommendations", JSON.stringify(recommendations));
                 loadRecommendations();
             }
         }
-
         function loadRecommendations() {
             const recList = document.getElementById("recList");
             recList.innerHTML = "";
             recommendations = JSON.parse(localStorage.getItem("recommendations")) || [];
+            recommendations.forEach((rec, index) => {
+                const recDiv = document.createElement("div");
+                recDiv.classList.add("recommendation");
+                recDiv.innerHTML = `<h3>${rec.title}</h3><p>${rec.details}</p>`;
+                recList.appendChild(recDiv);
+            });
         }
-
         loadLogin();
     </script>
-
 </body>
 </html>
