--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
             <h2>Login</h2>
             <input type="text" id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
-            <label><input type="checkbox" id="rememberMe"> Keep Me Signed In</label>
+            <label>
+                <input type="checkbox" id="rememberMe"> Keep Me Signed In
+            </label>
             <button id="submitLogin" class="login-btn">Login</button>
-            <p class="error-message" id="errorMessage" style="color: red; display: none;">Invalid credentials!</p>
+            <p id="errorMessage" style="color: red; display: none;">Invalid credentials!</p>
         </div>
     </div>
     <div id="dashboard" style="display: none;">
@@ -105,30 +107,43 @@
         </div>
     </div>
     <script>
+        // User roles and passwords
         const users = {
             "admin": { password: "admin123", role: "Admin" },
             "analyst": { password: "analyst123", role: "Analyst" },
             "client": { password: "client123", role: "Client" }
         };
+
+        // Recommendations data
         let recommendations = [];
+
+        // Toggle settings menu visibility
         function toggleSettings() {
             const menu = document.getElementById("settingsMenu");
             menu.style.display = menu.style.display === "block" ? "none" : "block";
         }
+
+        // Enable/disable dark mode
         function toggleDarkMode() {
             document.body.classList.toggle("dark-mode");
             localStorage.setItem("darkMode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
         }
+
+        // Logout user
         function logout() {
             localStorage.removeItem("loggedInUser");
             location.reload();
         }
+
+        // Load saved login session
         function loadLogin() {
             const savedUser = JSON.parse(localStorage.getItem("loggedInUser"));
             if (savedUser) {
                 showDashboard(savedUser.role);
             }
         }
+
+        // Show dashboard based on user role
         function showDashboard(role) {
             document.getElementById("loginSection").style.display = "none";
             document.getElementById("dashboard").style.display = "block";
@@ -138,9 +153,11 @@
             }
             loadRecommendations();
         }
-        document.getElementById('submitLogin').addEventListener('click', function() {
-            let username = document.getElementById("username").value.trim().toLowerCase();
-            let password = document.getElementById("password").value.trim();
+
+        // Validate login
+        document.getElementById('submitLogin').addEventListener('click', function () {
+            const username = document.getElementById("username").value.trim().toLowerCase();
+            const password = document.getElementById("password").value.trim();
             if (users[username] && users[username].password === password) {
                 showDashboard(users[username].role);
                 if (document.getElementById("rememberMe").checked) {
@@ -150,26 +167,31 @@
                 document.getElementById("errorMessage").style.display = "block";
             }
         });
+
+        // Add recommendation
         function addRecommendation() {
-            const title = document.getElementById("recTitle").value;
-            const details = document.getElementById("recDetails").value;
+            const title = document.getElementById("recTitle").value.trim();
+            const details = document.getElementById("recDetails").value.trim();
             if (title && details) {
                 recommendations.push({ title, details });
                 localStorage.setItem("recommendations", JSON.stringify(recommendations));
                 loadRecommendations();
             }
         }
+
+        // Load recommendations
         function loadRecommendations() {
             const recList = document.getElementById("recList");
             recList.innerHTML = "";
             recommendations = JSON.parse(localStorage.getItem("recommendations")) || [];
-            recommendations.forEach((rec, index) => {
+            recommendations.forEach(rec => {
                 const recDiv = document.createElement("div");
                 recDiv.classList.add("recommendation");
                 recDiv.innerHTML = `<h3>${rec.title}</h3><p>${rec.details}</p>`;
                 recList.appendChild(recDiv);
             });
         }
+
         loadLogin();
     </script>
 </body>
