--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
             margin: 10px;
             border-radius: 5px;
         }
-        .like-dislike {
+        .edited {
+            font-size: 0.8em;
+            color: gray;
+        }
+        .reaction {
             display: flex;
             justify-content: space-around;
             margin-top: 10px;
@@ -98,8 +102,10 @@
         <div id="adminPanel" class="admin-panel" style="display: none;">
             <h3>Add Recommendation</h3>
             <input type="text" id="recTitle" placeholder="Title">
-            <input type="text" id="recDetails" placeholder="Details (Buy Price, Target, Stop Loss)">
-            <button onclick="addRecommendation()">Add</button>
+            <input type="text" id="recDetails" placeholder="Details (Buy Price, Stop Loss)">
+            <button onclick="addTarget()">Add Target</button>
+            <div id="targetsContainer"></div>
+            <button onclick="addRecommendation()">Add Recommendation</button>
         </div>
         <div id="recommendations">
             <h2>Stock Market Recommendations</h2>
@@ -107,35 +113,30 @@
         </div>
     </div>
     <script>
-        // User roles and passwords
         const users = {
             "admin": { password: "admin123", role: "Admin" },
             "analyst": { password: "analyst123", role: "Analyst" },
             "client": { password: "client123", role: "Client" }
         };
 
-        // Recommendations data
         let recommendations = [];
+        let tempTargets = [];
 
-        // Toggle settings menu visibility
         function toggleSettings() {
             const menu = document.getElementById("settingsMenu");
             menu.style.display = menu.style.display === "block" ? "none" : "block";
         }
 
-        // Enable/disable dark mode
         function toggleDarkMode() {
             document.body.classList.toggle("dark-mode");
             localStorage.setItem("darkMode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
         }
 
-        // Logout user
         function logout() {
             localStorage.removeItem("loggedInUser");
             location.reload();
         }
 
-        // Load saved login session
         function loadLogin() {
             const savedUser = JSON.parse(localStorage.getItem("loggedInUser"));
             if (savedUser) {
@@ -143,7 +144,6 @@
             }
         }
 
-        // Show dashboard based on user role
         function showDashboard(role) {
             document.getElementById("loginSection").style.display = "none";
             document.getElementById("dashboard").style.display = "block";
@@ -154,7 +154,6 @@
             loadRecommendations();
         }
 
-        // Validate login
         document.getElementById('submitLogin').addEventListener('click', function () {
             const username = document.getElementById("username").value.trim().toLowerCase();
             const password = document.getElementById("password").value.trim();
@@ -168,26 +167,42 @@
             }
         });
 
-        // Add recommendation
+        function addTarget() {
+            const targetField = document.createElement("input");
+            targetField.type = "text";
+            targetField.placeholder = `Target ${tempTargets.length + 1}`;
+            targetField.className = "target-field";
+            document.getElementById("targetsContainer").appendChild(targetField);
+            tempTargets.push(targetField);
+        }
+
         function addRecommendation() {
             const title = document.getElementById("recTitle").value.trim();
             const details = document.getElementById("recDetails").value.trim();
+            const targets = tempTargets.map(targetField => targetField.value.trim()).filter(Boolean);
+
             if (title && details) {
-                recommendations.push({ title, details });
+                recommendations.push({ title, details, targets, edited: false });
                 localStorage.setItem("recommendations", JSON.stringify(recommendations));
+                tempTargets = [];
+                document.getElementById("targetsContainer").innerHTML = "";
                 loadRecommendations();
             }
         }
 
-        // Load recommendations
         function loadRecommendations() {
             const recList = document.getElementById("recList");
             recList.innerHTML = "";
             recommendations = JSON.parse(localStorage.getItem("recommendations")) || [];
-            recommendations.forEach(rec => {
+            recommendations.forEach((rec, index) => {
                 const recDiv = document.createElement("div");
                 recDiv.classList.add("recommendation");
-                recDiv.innerHTML = `<h3>${rec.title}</h3><p>${rec.details}</p>`;
+                recDiv.innerHTML = `
+                    <h3>${rec.title}</h3>
+                    <p>${rec.details}</p>
+                    ${rec.targets.map((target, i) => `<p>Target ${i + 1}: ${target}</p>`).join("")}
+                    ${rec.edited ? `<span class="edited">Edited</span>` : ""}
+                `;
                 recList.appendChild(recDiv);
             });
         }
