--- a/index.html
+++ b/index.html
@@ -67,39 +67,24 @@
             font-size: 0.8em;
             color: gray;
         }
-        .reaction {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 10px;
-        }
-        .liked { color: green; }
-        .disliked { color: red; }
     </style>
 </head>
 <body>
     <div class="navbar">
         <span>CRM Dashboard</span>
-        <button onclick="toggleSettings()">⚙ Settings</button>
-    </div>
-    <div class="settings-menu" id="settingsMenu">
-        <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
-        <button onclick="logout()">Logout</button>
     </div>
     <div id="loginSection">
         <div class="login-container">
             <h2>Login</h2>
             <input type="text" id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
-            <label>
-                <input type="checkbox" id="rememberMe"> Keep Me Signed In
-            </label>
             <button id="submitLogin" class="login-btn">Login</button>
             <p id="errorMessage" style="color: red; display: none;">Invalid credentials!</p>
         </div>
     </div>
     <div id="dashboard" style="display: none;">
         <h1 id="welcomeMessage">Welcome to Your CRM</h1>
-        <div id="adminPanel" class="admin-panel" style="display: none;">
+        <div id="adminPanel" class="admin-panel">
             <h3>Add Recommendation</h3>
             <input type="text" id="recTitle" placeholder="Title">
             <input type="number" id="buyPrice" placeholder="Buy Price">
@@ -109,7 +94,7 @@
             <button onclick="addRecommendation()">Add Recommendation</button>
         </div>
         <div id="recommendations">
-            <h2>Stock Market Recommendations</h2>
+            <h2>Recommendations</h2>
             <div id="recList"></div>
         </div>
     </div>
@@ -123,46 +108,21 @@
         let recommendations = [];
         let tempTargets = [];
 
-        function toggleSettings() {
-            const menu = document.getElementById("settingsMenu");
-            menu.style.display = menu.style.display === "block" ? "none" : "block";
-        }
-
-        function toggleDarkMode() {
-            document.body.classList.toggle("dark-mode");
-            localStorage.setItem("darkMode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
-        }
-
-        function logout() {
-            localStorage.removeItem("loggedInUser");
-            location.reload();
-        }
-
-        function loadLogin() {
-            const savedUser = JSON.parse(localStorage.getItem("loggedInUser"));
-            if (savedUser) {
-                showDashboard(savedUser.role);
-            }
-        }
-
         function showDashboard(role) {
             document.getElementById("loginSection").style.display = "none";
             document.getElementById("dashboard").style.display = "block";
             document.getElementById("welcomeMessage").textContent = `Welcome ${role}!`;
-            if (role === "Admin" || role === "Analyst") {
+            if (role === "Admin") {
                 document.getElementById("adminPanel").style.display = "block";
             }
             loadRecommendations();
         }
 
         document.getElementById('submitLogin').addEventListener('click', function () {
-            const username = document.getElementById("username").value.trim().toLowerCase();
+            const username = document.getElementById("username").value.trim();
             const password = document.getElementById("password").value.trim();
             if (users[username] && users[username].password === password) {
                 showDashboard(users[username].role);
-                if (document.getElementById("rememberMe").checked) {
-                    localStorage.setItem("loggedInUser", JSON.stringify({ username, role: users[username].role }));
-                }
             } else {
                 document.getElementById("errorMessage").style.display = "block";
             }
@@ -185,17 +145,22 @@
 
             if (title && buyPrice && stopLoss) {
                 recommendations.push({ title, buyPrice, stopLoss, targets, edited: false });
-                localStorage.setItem("recommendations", JSON.stringify(recommendations));
                 tempTargets = [];
-                document.getElementById("targetsContainer").innerHTML = "";
+                document.getElementById("targetsContainer").innerHTML = ""; // Clear targets container
+                clearInputs(); // Clear input fields
                 loadRecommendations();
             }
+        }
+
+        function clearInputs() {
+            document.getElementById("recTitle").value = "";
+            document.getElementById("buyPrice").value = "";
+            document.getElementById("stopLoss").value = "";
         }
 
         function loadRecommendations() {
             const recList = document.getElementById("recList");
             recList.innerHTML = "";
-            recommendations = JSON.parse(localStorage.getItem("recommendations")) || [];
             recommendations.forEach((rec, index) => {
                 const recDiv = document.createElement("div");
                 recDiv.classList.add("recommendation");
@@ -204,13 +169,10 @@
                     <p>Buy Price: ₹${rec.buyPrice}</p>
                     <p>Stop Loss: ₹${rec.stopLoss}</p>
                     ${rec.targets.map((target, i) => `<p>Target ${i + 1}: ₹${target}</p>`).join("")}
-                    ${rec.edited ? `<span class="edited">Edited</span>` : ""}
                 `;
                 recList.appendChild(recDiv);
             });
         }
-
-        loadLogin();
     </script>
 </body>
 </html>
