--- a/index.html
+++ b/index.html
@@ -4,61 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM Dashboard</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-            background: #333;
-            color: white;
-        }
-        .login-container, .admin-panel {
-            width: 300px;
-            margin: 20px auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            background: white;
-        }
-        .login-container input, .admin-panel input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .login-btn, .admin-panel button {
-            width: 100%;
-            padding: 10px;
-            background: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-        .recommendation {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin: 10px;
-            border-radius: 5px;
-            background: white;
-        }
-        .reaction {
-            display: flex;
-            justify-content: space-around;
-            margin-top: 10px;
-        }
-        .liked { color: green; }
-        .disliked { color: red; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
@@ -89,97 +35,6 @@
             <div id="recList"></div>
         </div>
     </div>
-    <script>
-        const users = {
-            "admin": { password: "admin123", role: "Admin" },
-            "analyst": { password: "analyst123", role: "Analyst" },
-            "client": { password: "client123", role: "Client" }
-        };
-
-        let recommendations = [];
-        let tempTargets = [];
-        let reactions = {};
-
-        function showDashboard(role) {
-            document.getElementById("loginSection").style.display = "none";
-            document.getElementById("dashboard").style.display = "block";
-            document.getElementById("welcomeMessage").textContent = `Welcome ${role}!`;
-            if (role === "Admin" || role === "Analyst") {
-                document.getElementById("adminPanel").style.display = "block";
-            } else {
-                document.getElementById("adminPanel").style.display = "none";
-            }
-            loadRecommendations(role);
-        }
-
-        document.getElementById('submitLogin').addEventListener('click', function () {
-            const username = document.getElementById("username").value.trim();
-            const password = document.getElementById("password").value.trim();
-            if (users[username] && users[username].password === password) {
-                showDashboard(users[username].role);
-            } else {
-                document.getElementById("errorMessage").style.display = "block";
-            }
-        });
-
-        function addTarget() {
-            const targetField = document.createElement("input");
-            targetField.type = "number";
-            targetField.placeholder = `Target ${tempTargets.length + 1}`;
-            targetField.className = "target-field";
-            document.getElementById("targetsContainer").appendChild(targetField);
-            tempTargets.push(targetField);
-        }
-
-        function addRecommendation() {
-            const title = document.getElementById("recTitle").value.trim();
-            const buyPrice = document.getElementById("buyPrice").value.trim();
-            const stopLoss = document.getElementById("stopLoss").value.trim();
-            const targets = tempTargets.map(targetField => targetField.value.trim()).filter(Boolean);
-
-            if (title && buyPrice && stopLoss) {
-                recommendations.push({ title, buyPrice, stopLoss, targets });
-                tempTargets = [];
-                document.getElementById("targetsContainer").innerHTML = ""; // Clear targets container
-                clearInputs(); // Clear input fields
-                loadRecommendations("Admin"); // Reload recommendations
-            }
-        }
-
-        function clearInputs() {
-            document.getElementById("recTitle").value = "";
-            document.getElementById("buyPrice").value = "";
-            document.getElementById("stopLoss").value = "";
-        }
-
-        function loadRecommendations(role) {
-            const recList = document.getElementById("recList");
-            recList.innerHTML = "";
-            recommendations.forEach((rec, index) => {
-                const recDiv = document.createElement("div");
-                recDiv.classList.add("recommendation");
-                recDiv.innerHTML = `
-                    <h3>${rec.title}</h3>
-                    <p>Buy Price: ₹${rec.buyPrice}</p>
-                    <p>Stop Loss: ₹${rec.stopLoss}</p>
-                    ${rec.targets.map((target, i) => `<p>Target ${i + 1}: ₹${target}</p>`).join("")}
-                `;
-                if (role === "Client") {
-                    recDiv.innerHTML += `
-                        <div class="reaction">
-                            <button onclick="toggleReaction(${index}, 'like')" class="${reactions[index] === 'like' ? 'liked' : ''}">Like</button>
-                            <button onclick="toggleReaction(${index}, 'dislike')" class="${reactions[index] === 'dislike' ? 'disliked' : ''}">Dislike</button>
-                        </div>
-                    `;
-                }
-                recList.appendChild(recDiv);
-            });
-        }
-
-        function toggleReaction(index, reactionType) {
-            reactions[index] = reactions[index] === reactionType ? null : reactionType;
-            loadRecommendations("Client");
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
