--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <h2>Login</h2>
             <input type="text" id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
+            <!-- Added Keep Me Signed In Checkbox -->
+            <label>
+                <input type="checkbox" id="rememberMe"> Keep Me Signed In
+            </label>
             <button id="submitLogin" class="login-btn">Login</button>
             <p id="errorMessage" style="color: red; display: none;">Invalid credentials!</p>
         </div>
