--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="navbar">
         <span>CRM Dashboard</span>
+        <!-- Settings Button Moved to Top Right -->
+        <button id="settingsButton" class="settings-btn">Settings</button>
     </div>
     <div id="loginSection">
         <div class="login-container">
@@ -24,7 +26,6 @@
     </div>
     <div id="dashboard" style="display: none;">
         <h1 id="welcomeMessage">Welcome to Your CRM</h1>
-        <button id="settingsButton" class="settings-btn">Settings</button>
         <div id="settingsPanel" class="settings-panel" style="display: none;">
             <h3>Settings</h3>
             <label>
